--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -10,14 +10,14 @@
         <div class="characters">
             <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
-                <i class="logo"> </i>
+                <i class="logo" src="../Imagens/zJujutsuKaisen.png"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/AoiTodo.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Hanami.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Jogo.png" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/KentoNanami.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/KugisakiNobara.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Mahito.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/MegumiFushiguro.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/SuguroGeto.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Sukuna.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/YujiItadori.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
@@ -107,14 +107,14 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/YutaOkkotsu.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
-        
+
     </main>
 
     <ul class="buttons"></ul>
