--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -17,107 +17,168 @@
         </div>
 
         <div class="characters">
-            <img src="../Imagens/AoiTodo.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/AoiTodo.jpg" alt="Aoi Todo" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Aoi Todo</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/Hanami.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Hanami.jpg" alt="Hanami" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Hanami</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/Jogo.png" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Jogo.png" alt="Jogo" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Jogo</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/KentoNanami.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/KentoNanami.jpg" alt="Kento Nanami" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Kento Nanami</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/KugisakiNobara.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/KugisakiNobara.jpg" alt="KugisakiNobara" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Kugisaki Nobara</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/Mahito.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Mahito.jpg" alt="Mahito" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Mahito</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/MegumiFushiguro.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/MegumiFushiguro.jpg" alt="Megumi Fushiguro" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Megumi Fushiguro</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/SuguroGeto.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/SuguroGeto.jpg" alt="Suguro Geto" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Suguro Geto</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/Sukuna.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/Sukuna.jpg" alt="Sukuna" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Sukuna</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/YujiItadori.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/YujiItadori.jpg" alt="Yuji Itadori" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Yuji Itadori</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
         <div class="characters">
-            <img src="../Imagens/YutaOkkotsu.jpg" alt="Satoru Gojo" class="image">
+            <img src="../Imagens/YutaOkkotsu.jpg" alt="Yuta Okkotsu" class="image">
             <div class="content">
                 <i class="logo"> </i>
-                <h2 class="character-name">Satoru Gojo</h2>
+                <h2 class="character-name">Yuta Okkotsu</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
     </main>
 
-    <ul class="buttons"></ul>
+    <ul class="buttons">
+        <li>
+            <button>
+                <img src="../Imagens/SatoruGojoIcon.png" alt="Satoru Gojo Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/AoiTodoIcon.jpg" alt="Aoi Todo Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/HanamiIcon.png" alt="Hanami Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/JogoIcon.png" alt="Jogo Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/KentoNanamiIcon.png" alt="Kento Nanami Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/KugisakiNobaraIcon.png" alt="Kugisaki Nobara Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/MahitoIcon.png" alt="Mahito Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/MegumiFushiguroIcon.png" alt="Megumi Fushiguro Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/SuguroGetoIcon.png" alt="Suguro Geto Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/SukunaIcon.png" alt="Sukuna Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/YujiItadoriIcon.png" alt="Yuji Itadori Icon">
+            </button>
+        </li>
+        <li>
+            <button>
+                <img src="../Imagens/YutaOkkotsuIcon.png" alt="Yuta Okkotsu Icon">
+            </button>
+        </li>
+    </ul>
 
 </body>
 </html>
