--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Rubik:wght@300;400&family=Secular+One&display=swap" rel="stylesheet">
+
     <title>AnimeProject</title>
 </head>
 <body>
     <main class="characters">
-        <div class="characters">
+        <div class="characters selected">
             <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo" src="../Imagens/zJujutsuKaisen.png"> </i>
@@ -119,62 +124,62 @@
 
     <ul class="buttons">
         <li>
-            <button>
+            <button class="button selected">
                 <img src="../Imagens/SatoruGojoIcon.png" alt="Satoru Gojo Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/AoiTodoIcon.jpg" alt="Aoi Todo Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/HanamiIcon.png" alt="Hanami Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/JogoIcon.png" alt="Jogo Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/KentoNanamiIcon.png" alt="Kento Nanami Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/KugisakiNobaraIcon.png" alt="Kugisaki Nobara Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/MahitoIcon.png" alt="Mahito Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/MegumiFushiguroIcon.png" alt="Megumi Fushiguro Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/SuguroGetoIcon.png" alt="Suguro Geto Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/SukunaIcon.png" alt="Sukuna Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/YujiItadoriIcon.png" alt="Yuji Itadori Icon">
             </button>
         </li>
         <li>
-            <button>
+            <button class="button">
                 <img src="../Imagens/YutaOkkotsuIcon.png" alt="Yuta Okkotsu Icon">
             </button>
         </li>
