--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Rubik:wght@300;400&family=Secular+One&display=swap" rel="stylesheet">
 
     <title>AnimeProject</title>
+
+    <link rel="stylesheet" href="style.css" />
+    
 </head>
 <body>
     <main class="characters">
@@ -17,7 +20,7 @@
             <div class="content">
                 <i class="logo" src="../Imagens/zJujutsuKaisen.png"> </i>
                 <h2 class="character-name">Satoru Gojo</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -26,7 +29,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Aoi Todo</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -35,7 +38,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Hanami</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -44,7 +47,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Jogo</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -53,7 +56,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Kento Nanami</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -62,7 +65,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Kugisaki Nobara</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -71,7 +74,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Mahito</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -80,7 +83,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Megumi Fushiguro</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -89,7 +92,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Suguro Geto</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -98,7 +101,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Sukuna</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -107,7 +110,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Yuji Itadori</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
@@ -116,7 +119,7 @@
             <div class="content">
                 <i class="logo"> </i>
                 <h2 class="character-name">Yuta Okkotsu</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquid sapiente cupiditate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
             </div>
         </div>
 
