--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <main class="characters">
-        <div class="characters selected">
+        <div class="character selected">
             <img src="../Imagens/SatoruGojo.jpg" alt="Satoru Gojo" class="image">
             <div class="content">
                 <i class="logo" src="../Imagens/zJujutsuKaisen.png"> </i>
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/AoiTodo.jpg" alt="Aoi Todo" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/Hanami.jpg" alt="Hanami" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/Jogo.png" alt="Jogo" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/KentoNanami.jpg" alt="Kento Nanami" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/KugisakiNobara.jpg" alt="KugisakiNobara" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/Mahito.jpg" alt="Mahito" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/MegumiFushiguro.jpg" alt="Megumi Fushiguro" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/SuguroGeto.jpg" alt="Suguro Geto" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -96,7 +96,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/Sukuna.jpg" alt="Sukuna" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/YujiItadori.jpg" alt="Yuji Itadori" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div class="characters">
+        <div class="character">
             <img src="../Imagens/YutaOkkotsu.jpg" alt="Yuta Okkotsu" class="image">
             <div class="content">
                 <i class="logo"> </i>
