--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -133,7 +133,7 @@
         </li>
         <li>
             <button class="button">
-                <img src="../Imagens/AoiTodoIcon.jpg" alt="Aoi Todo Icon">
+                <img src="../Imagens/AoiTodoIcon.png" alt="Aoi Todo Icon">
             </button>
         </li>
         <li>
