--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -25,15 +25,6 @@
         </div>
 
         <div class="character">
-            <img src="../Imagens/AoiTodo.jpg" alt="Aoi Todo" class="image">
-            <div class="content">
-                <i class="logo"> </i>
-                <h2 class="character-name">Aoi Todo</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio numquam voluptas modi velit ratione aliquclass sapiente cupclassitate, vitae nemo natus enim voluptates, eos facere, molestias ipsa ipsam quod illum nulla?</p>
-            </div>
-        </div>
-
-        <div class="character">
             <img src="../Imagens/Hanami.jpg" alt="Hanami" class="image">
             <div class="content">
                 <i class="logo"> </i>
@@ -127,13 +118,8 @@
 
     <ul class="buttons">
         <li>
-            <button class="button selected">
+            <button class="button selected" id="first-button">
                 <img src="../Imagens/SatoruGojoIcon.png" alt="Satoru Gojo Icon">
-            </button>
-        </li>
-        <li>
-            <button class="button">
-                <img src="../Imagens/AoiTodoIcon.png" alt="Aoi Todo Icon">
             </button>
         </li>
         <li>
