--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -118,61 +118,63 @@
 
     <ul class="buttons">
         <li>
-            <button class="button selected" id="first-button">
+            <button class="button selected" id="SatoruGojo">
                 <img src="../Imagens/SatoruGojoIcon.png" alt="Satoru Gojo Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="Hanami">
                 <img src="../Imagens/HanamiIcon.png" alt="Hanami Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="Jogo">
                 <img src="../Imagens/JogoIcon.png" alt="Jogo Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="KentoNanami">
                 <img src="../Imagens/KentoNanamiIcon.png" alt="Kento Nanami Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="KugisakiNobara">
                 <img src="../Imagens/KugisakiNobaraIcon.png" alt="Kugisaki Nobara Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="Mahito">
                 <img src="../Imagens/MahitoIcon.png" alt="Mahito Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="MegumiFushiguro">
                 <img src="../Imagens/MegumiFushiguroIcon.png" alt="Megumi Fushiguro Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="SuguroGeto">
                 <img src="../Imagens/SuguroGetoIcon.png" alt="Suguro Geto Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="Sukuna">
                 <img src="../Imagens/SukunaIcon.png" alt="Sukuna Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="YujiItadori">
                 <img src="../Imagens/YujiItadoriIcon.png" alt="Yuji Itadori Icon">
             </button>
         </li>
         <li>
-            <button class="button">
+            <button class="button" id="YutaOkkotsu">
                 <img src="../Imagens/YutaOkkotsuIcon.png" alt="Yuta Okkotsu Icon">
             </button>
         </li>
     </ul>
+
+    <script src="index.js"></script>
 
 </body>
 </html>
