--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -10,7 +10,7 @@
 
     <title>AnimeProject</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     
 </head>
 <body>
@@ -174,7 +174,7 @@
         </li>
     </ul>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 </html>
